--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,8 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+# Local environment variables
+.env
+machine-learning-client/.env
+web-app/.env
