--- a/web-app/Dockerfile
+++ b/web-app/Dockerfile
@@ -2,13 +2,14 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
-RUN pip install pipenv
-
 COPY Pipfile Pipfile.lock /app/
 
+RUN pip install pipenv
 RUN pipenv lock
-
 RUN pipenv install --deploy --ignore-pipfile
+
+ENV PIPENV_VENV_IN_PROJECT=1
+ENV PATH="/app/.venv/bin:$PATH"
 
 COPY . .
 
