--- a/web-app/Dockerfile
+++ b/web-app/Dockerfile
@@ -2,17 +2,14 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
+RUN pip install pipenv
+
 COPY Pipfile Pipfile.lock /app/
 
-RUN pip install pipenv
-RUN pipenv lock
 RUN pipenv install --deploy --ignore-pipfile
-
-ENV PIPENV_VENV_IN_PROJECT=1
-ENV PATH="/app/.venv/bin:$PATH"
 
 COPY . .
 
-EXPOSE 5000
+RUN pipenv install pylint black
 
-CMD ["pipenv", "run", "python", "app.py"]
+CMD ["pipenv", "run", "pylint", "app.py"]
