--- a/web-app/env.example
+++ b/web-app/env.example
@@ -1,5 +1,7 @@
-MONGO_HOST=mongodb
+MONGO_HOST=mongo
 MONGO_PORT=27017
-MONGO_DB=app_db
+MONGO_DB=webappdb
 MONGO_USER=admin
 MONGO_PASS=tvq1O5qT9oY6QuGI
+DB_NAME="myDatabase"
+MONGO_URI='mongodb+srv://admin:tvq1O5qT9oY6QuGI@project4.ys8tfry.mongodb.net/myDatabase?retryWrites=true&w=majority'
