rock paper scissors basic added

--- a/web-app/Pipfile
+++ b/web-app/Pipfile
@@ -12,6 +12,9 @@ typing_extensions = "*"
 black = "*"
 flask-login = "*"
 flask-pymongo = "*"
+python-dotenv = "*"
+requests = "*"
+
 
 
 [dev-packages]
