--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,26 @@
-version: "3.8"
-
 services:
   web-app:
-    build:
-      context: ./web-app
+    build: ./web-app
     ports:
       - "5001:5000"
     env_file:
-      - ./web-app/.env
+      - .env
     depends_on:
-      - mongo
+      - mlc
+    networks:
+      - app-network
+
+  mlc:
+    build: ./machine-learning-client
+    ports:
+      - "8000:8000"
+    env_file:
+      - .env
+    networks:
+      - app-network
 
   mongo:
     image: mongo:6.0
-    restart: always
     ports:
       - "27017:27017"
     environment:
@@ -21,7 +28,12 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASS}
     volumes:
       - mongo-data:/data/db
+    networks:
+      - app-network
+
 
 volumes:
   mongo-data:
- 
+
+networks:
+  app-network:
