--- a/machine-learning-client/Dockerfile
+++ b/machine-learning-client/Dockerfile
@@ -1,14 +1,11 @@
 FROM python:3.10-slim
 
 WORKDIR /app
+
 RUN pip install pipenv
 
 COPY Pipfile Pipfile.lock ./
-
-RUN pipenv install --system
-
-
+RUN pipenv install --system --deploy
 COPY . .
-
-EXPOSE 5000
+EXPOSE 8000
 CMD ["python", "app.py"]
