--- a/env.example
+++ b/env.example
@@ -5,5 +5,7 @@ MONGO_USER=
 MONGO_PASS=
 DB_NAME=
 MONGO_URI=
+OPENAI_API_KEY =
+MLC_API_URL=
 
 ### Example .env file. Actualt .env file sent in the team's discord channel.
